# serializer version: 1
# name: test_create_grouped_bucketed_projection_group_by_data_type_bucketing_H3_COARSE
  list([
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1.0,
      'DATA_TYPE': '?',
      'H3_01': 'abce',
      'H3_02': 'abce2',
      'NAME': 'name6',
      'RATING_0_TO_5': None,
      'TIMESTAMP_DAY': '2025-08-02',
      'TIMESTAMP_UTC': '2025-08-02T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid6',
      <_C.GROUP_NAME: '_GROUP_NAME'>: '?',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1.0,
      'DATA_TYPE': '?',
      'H3_01': 'abcd',
      'H3_02': 'abcde ',
      'NAME': 'name9',
      'RATING_0_TO_5': 4,
      'TIMESTAMP_DAY': nan,
      'TIMESTAMP_UTC': nan,
      'TIMESTAMP_YEAR': nan,
      'UUID_STRING': 'uuid9',
      <_C.GROUP_NAME: '_GROUP_NAME'>: '?',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 4.0,
      'DATA_TYPE': 'GPS',
      'H3_01': 'abcd',
      'H3_02': 'abcd1',
      'NAME': 'name0',
      'RATING_0_TO_5': 1,
      'TIMESTAMP_DAY': '2024-07-27',
      'TIMESTAMP_UTC': '2024-07-27T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid0',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'GPS',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 3.0,
      'DATA_TYPE': 'PHOTO',
      'H3_01': 'abce',
      'H3_02': 'abce1',
      'NAME': 'name4',
      'RATING_0_TO_5': 5,
      'TIMESTAMP_DAY': '2024-07-31',
      'TIMESTAMP_UTC': '2024-07-31T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid4',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'PHOTO',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: nan,
      'DATA_TYPE': 'VIDEO',
      'H3_01': 'abce',
      'H3_02': 'abce3',
      'NAME': 'name8',
      'RATING_0_TO_5': 3,
      'TIMESTAMP_DAY': '2025-08-04',
      'TIMESTAMP_UTC': '2025-08-04T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid8',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'VIDEO',
    }),
  ])
# ---
# name: test_create_grouped_bucketed_projection_group_by_data_type_bucketing_H3_COARSE.1
  list([
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: nan,
      'DATA_TYPE': '?',
      'H3_01': 'abce',
      'H3_02': 'abce2',
      'NAME': 'name6',
      'RATING_0_TO_5': None,
      'TIMESTAMP_DAY': '2025-08-02',
      'TIMESTAMP_UTC': '2025-08-02T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid6',
      <_C.GROUP_NAME: '_GROUP_NAME'>: '?',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: nan,
      'DATA_TYPE': '?',
      'H3_01': 'abcd',
      'H3_02': 'abcde ',
      'NAME': 'name9',
      'RATING_0_TO_5': 4,
      'TIMESTAMP_DAY': nan,
      'TIMESTAMP_UTC': nan,
      'TIMESTAMP_YEAR': nan,
      'UUID_STRING': 'uuid9',
      <_C.GROUP_NAME: '_GROUP_NAME'>: '?',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 2.0,
      'DATA_TYPE': 'GPS',
      'H3_01': 'abcd',
      'H3_02': 'abcd1',
      'NAME': 'name0',
      'RATING_0_TO_5': 1,
      'TIMESTAMP_DAY': '2024-07-27',
      'TIMESTAMP_UTC': '2024-07-27T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid0',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'GPS',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 2.0,
      'DATA_TYPE': 'GPS',
      'H3_01': 'abcd',
      'H3_02': 'abcd2',
      'NAME': 'name2',
      'RATING_0_TO_5': 3,
      'TIMESTAMP_DAY': '2024-07-29',
      'TIMESTAMP_UTC': '2024-07-29T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid2',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'GPS',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 2.0,
      'DATA_TYPE': 'PHOTO',
      'H3_01': 'abce',
      'H3_02': 'abce1',
      'NAME': 'name4',
      'RATING_0_TO_5': 5,
      'TIMESTAMP_DAY': '2024-07-31',
      'TIMESTAMP_UTC': '2024-07-31T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid4',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'PHOTO',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 1.0,
      'DATA_TYPE': 'PHOTO',
      'H3_01': 'abce',
      'H3_02': 'abce2',
      'NAME': 'name7',
      'RATING_0_TO_5': 2,
      'TIMESTAMP_DAY': '2025-08-03',
      'TIMESTAMP_UTC': '2025-08-03T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid7',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'PHOTO',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: nan,
      'DATA_TYPE': 'VIDEO',
      'H3_01': 'abce',
      'H3_02': 'abce3',
      'NAME': 'name8',
      'RATING_0_TO_5': 3,
      'TIMESTAMP_DAY': '2025-08-04',
      'TIMESTAMP_UTC': '2025-08-04T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid8',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'VIDEO',
    }),
  ])
# ---
# name: test_create_grouped_bucketed_projection_group_by_data_type_no_bucketing
  list([
    dict({
      'DATA_TYPE': '?',
      'H3_01': 'abce',
      'H3_02': 'abce2',
      'NAME': 'name6',
      'RATING_0_TO_5': None,
      'TIMESTAMP_DAY': '2025-08-02',
      'TIMESTAMP_UTC': '2025-08-02T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid6',
      <_C.GROUP_NAME: '_GROUP_NAME'>: '?',
    }),
    dict({
      'DATA_TYPE': '?',
      'H3_01': 'abcd',
      'H3_02': 'abcde ',
      'NAME': 'name9',
      'RATING_0_TO_5': 4,
      'TIMESTAMP_DAY': nan,
      'TIMESTAMP_UTC': nan,
      'TIMESTAMP_YEAR': nan,
      'UUID_STRING': 'uuid9',
      <_C.GROUP_NAME: '_GROUP_NAME'>: '?',
    }),
    dict({
      'DATA_TYPE': 'GPS',
      'H3_01': 'abcd',
      'H3_02': 'abcd1',
      'NAME': 'name0',
      'RATING_0_TO_5': 1,
      'TIMESTAMP_DAY': '2024-07-27',
      'TIMESTAMP_UTC': '2024-07-27T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid0',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'GPS',
    }),
    dict({
      'DATA_TYPE': 'GPS',
      'H3_01': 'abcd',
      'H3_02': 'abcd1',
      'NAME': 'name1',
      'RATING_0_TO_5': 2,
      'TIMESTAMP_DAY': '2024-07-28',
      'TIMESTAMP_UTC': '2024-07-28T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid1',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'GPS',
    }),
    dict({
      'DATA_TYPE': 'GPS',
      'H3_01': 'abcd',
      'H3_02': 'abcd2',
      'NAME': 'name2',
      'RATING_0_TO_5': 3,
      'TIMESTAMP_DAY': '2024-07-29',
      'TIMESTAMP_UTC': '2024-07-29T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid2',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'GPS',
    }),
    dict({
      'DATA_TYPE': 'GPS',
      'H3_01': 'abcd',
      'H3_02': 'abcd2',
      'NAME': 'name3',
      'RATING_0_TO_5': 4,
      'TIMESTAMP_DAY': '2024-07-30',
      'TIMESTAMP_UTC': '2024-07-30T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid3',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'GPS',
    }),
    dict({
      'DATA_TYPE': 'PHOTO',
      'H3_01': 'abce',
      'H3_02': 'abce1',
      'NAME': 'name4',
      'RATING_0_TO_5': 5,
      'TIMESTAMP_DAY': '2024-07-31',
      'TIMESTAMP_UTC': '2024-07-31T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid4',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'PHOTO',
    }),
    dict({
      'DATA_TYPE': 'PHOTO',
      'H3_01': 'abce',
      'H3_02': 'abce1',
      'NAME': 'name5',
      'RATING_0_TO_5': None,
      'TIMESTAMP_DAY': '2025-08-01',
      'TIMESTAMP_UTC': '2025-08-01T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid5',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'PHOTO',
    }),
    dict({
      'DATA_TYPE': 'PHOTO',
      'H3_01': 'abce',
      'H3_02': 'abce2',
      'NAME': 'name7',
      'RATING_0_TO_5': 2,
      'TIMESTAMP_DAY': '2025-08-03',
      'TIMESTAMP_UTC': '2025-08-03T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid7',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'PHOTO',
    }),
    dict({
      'DATA_TYPE': 'VIDEO',
      'H3_01': 'abce',
      'H3_02': 'abce3',
      'NAME': 'name8',
      'RATING_0_TO_5': 3,
      'TIMESTAMP_DAY': '2025-08-04',
      'TIMESTAMP_UTC': '2025-08-04T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid8',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'VIDEO',
    }),
    dict({
      'DATA_TYPE': 'VIDEO',
      'H3_01': nan,
      'H3_02': ' ',
      'NAME': 'name10',
      'RATING_0_TO_5': 5,
      'TIMESTAMP_DAY': '2025-08-06',
      'TIMESTAMP_UTC': '2025-08-06T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid10',
      <_C.GROUP_NAME: '_GROUP_NAME'>: 'VIDEO',
    }),
  ])
# ---
# name: test_create_grouped_bucketed_projection_no_grouping_no_bucketing
  list([
    dict({
      'DATA_TYPE': 'GPS',
      'H3_01': 'abcd',
      'H3_02': 'abcd1',
      'NAME': 'name0',
      'RATING_0_TO_5': 1,
      'TIMESTAMP_DAY': '2024-07-27',
      'TIMESTAMP_UTC': '2024-07-27T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid0',
    }),
    dict({
      'DATA_TYPE': 'GPS',
      'H3_01': 'abcd',
      'H3_02': 'abcd1',
      'NAME': 'name1',
      'RATING_0_TO_5': 2,
      'TIMESTAMP_DAY': '2024-07-28',
      'TIMESTAMP_UTC': '2024-07-28T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid1',
    }),
    dict({
      'DATA_TYPE': 'GPS',
      'H3_01': 'abcd',
      'H3_02': 'abcd2',
      'NAME': 'name2',
      'RATING_0_TO_5': 3,
      'TIMESTAMP_DAY': '2024-07-29',
      'TIMESTAMP_UTC': '2024-07-29T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid2',
    }),
    dict({
      'DATA_TYPE': 'GPS',
      'H3_01': 'abcd',
      'H3_02': 'abcd2',
      'NAME': 'name3',
      'RATING_0_TO_5': 4,
      'TIMESTAMP_DAY': '2024-07-30',
      'TIMESTAMP_UTC': '2024-07-30T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid3',
    }),
    dict({
      'DATA_TYPE': 'PHOTO',
      'H3_01': 'abce',
      'H3_02': 'abce1',
      'NAME': 'name4',
      'RATING_0_TO_5': 5,
      'TIMESTAMP_DAY': '2024-07-31',
      'TIMESTAMP_UTC': '2024-07-31T9:00:00',
      'TIMESTAMP_YEAR': '2024-01-01',
      'UUID_STRING': 'uuid4',
    }),
    dict({
      'DATA_TYPE': 'PHOTO',
      'H3_01': 'abce',
      'H3_02': 'abce1',
      'NAME': 'name5',
      'RATING_0_TO_5': None,
      'TIMESTAMP_DAY': '2025-08-01',
      'TIMESTAMP_UTC': '2025-08-01T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid5',
    }),
    dict({
      'DATA_TYPE': nan,
      'H3_01': 'abce',
      'H3_02': 'abce2',
      'NAME': 'name6',
      'RATING_0_TO_5': None,
      'TIMESTAMP_DAY': '2025-08-02',
      'TIMESTAMP_UTC': '2025-08-02T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid6',
    }),
    dict({
      'DATA_TYPE': 'PHOTO',
      'H3_01': 'abce',
      'H3_02': 'abce2',
      'NAME': 'name7',
      'RATING_0_TO_5': 2,
      'TIMESTAMP_DAY': '2025-08-03',
      'TIMESTAMP_UTC': '2025-08-03T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid7',
    }),
    dict({
      'DATA_TYPE': 'VIDEO',
      'H3_01': 'abce',
      'H3_02': 'abce3',
      'NAME': 'name8',
      'RATING_0_TO_5': 3,
      'TIMESTAMP_DAY': '2025-08-04',
      'TIMESTAMP_UTC': '2025-08-04T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid8',
    }),
    dict({
      'DATA_TYPE': nan,
      'H3_01': 'abcd',
      'H3_02': 'abcde ',
      'NAME': 'name9',
      'RATING_0_TO_5': 4,
      'TIMESTAMP_DAY': nan,
      'TIMESTAMP_UTC': nan,
      'TIMESTAMP_YEAR': nan,
      'UUID_STRING': 'uuid9',
    }),
    dict({
      'DATA_TYPE': 'VIDEO',
      'H3_01': nan,
      'H3_02': ' ',
      'NAME': 'name10',
      'RATING_0_TO_5': 5,
      'TIMESTAMP_DAY': '2025-08-06',
      'TIMESTAMP_UTC': '2025-08-06T9:00:00',
      'TIMESTAMP_YEAR': '2025-01-01',
      'UUID_STRING': 'uuid10',
    }),
  ])
# ---
# name: test_groupby_fillna
  list([
    dict({
      'A': '?',
      'B': '4.0',
      'C': '7',
    }),
    dict({
      'A': '2',
      'B': '5.0',
      'C': '8',
    }),
    dict({
      'A': '3',
      'B': '?',
      'C': '?',
    }),
  ])
# ---
# name: test_groupby_fillna.1
  True
# ---
